# xrtc

./: CMakeLists.txt  LICENSE  README.md  xrtc.cpp  xrtc.hpp
3rd/: CMakeLists.txt
3rd/jmi/: CMakeLists.txt  jmi_macro.h
3rd/mpegts/: CMakeLists.txt  mpegts_demuxer.hpp  mpegts_muxer.cpp  mpegts_muxer.hpp  simple_buffer.cpp  ts_packet.cpp  ts_packet.hpp  ts_pid.hpp
3rd/srt/: CMakeLists.txt
app/: CMakeLists.txt  dialog.cpp  dialog.hpp  dialog.ui  main.cpp
app/android/: AndroidManifest.xml
base/: CMakeLists.txt  run_task.cpp  run_task.hpp
cmake/: AddLib.cmake  AndroidOpenSSL.cmake  FetchWebrtcSource.cmake  GetOpenSSL.cmake  GetSrt.cmake  InitSystemName.cmake
logger/: CMakeLists.txt  xlog.hpp  xlog_common.hpp  xlog_level_base.hpp  xlog_path.hpp
mpegts/: CMakeLists.txt  common.cpp  crc.cpp  mpegts_demuxer.cpp  mpegts_muxer.hpp  ts_packet.cpp
simple/: CMakeLists.txt  simple_mpegts_muxer.cpp  simple_mpegts_muxer.hpp
srt_net/: CMakeLists.txt  README.md  srt_cc.cpp  srt_cc.hpp  srt_net.cpp  srt_net.hpp  test_srt_net.cpp  test_srt_net.hpp
webrtc/: CMakeLists.txt
webrtc/cmake/: FetchWebrtcSource.cmake  FindWebRTC.cmake
webrtc/plugin/: CMakeLists.txt
webrtc/plugin/graphics_device/: CMakeLists.txt  graphics_device.cpp  graphics_device.hpp  igraphics_device.cpp  igraphics_device.hpp  itexture_2d.cpp  itexture_2d.hpp
webrtc/plugin/webrtc_plugin/: CMakeLists.txt  gpu_memory_buffer.cpp  gpu_memory_buffer.hpp  pch.hpp  video_frame.cpp  video_frame.hpp  video_track_source.cpp  video_track_source.hpp
